--- a/index.html
+++ b/index.html
@@ -1,11 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
+
+<!doctype html>
+<html>
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Otakusss</title>
+  <meta http-equiv="X-UA-Compatible" content="chrome=1">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Coming Soon</title>
+  <meta name="google-site-verification" content="XZ7WAE2r20jzOesd3iVH85QDD5_ER0wHXYfKnkdiePE" />
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
+  <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=ms3Vv6gGS3mNlIDjt1xAP54t8CHDx_olamqsNDPjhleFjB03F6aWUz8RrIZK6T5yfn3vsR8mmT1CrJ8YGm2cRg" charset="UTF-8"></script><link rel="stylesheet" crossorigin="anonymous" href="https://gc.kis.v2.scr.kaspersky-labs.com/E3E8934C-235A-4B0E-825A-35A08381A191/abn/main.css?attr=aHR0cHM6Ly93d3cuYWtlbGFjb25zdWx0YW5jeS5jb20v"/><script src="//assets.squarespace.com/@sqs/polyfiller/1.2.2/legacy.js" nomodule type="text/javascript" crossorigin="anonymous"></script>
+  <script src="//assets.squarespace.com/@sqs/polyfiller/1.2.2/modern.js" type="text/javascript" crossorigin="anonymous"></script>
+  <script crossorigin="anonymous" src="//assets.squarespace.com/universal/scripts-compressed/extract-css-runtime-3561b31cc604f8aef9ac9-min.en-US.js" ></script><script crossorigin="anonymous" src="//assets.squarespace.com/universal/scripts-compressed/extract-css-moment-js-vendor-48253fb45a7ee7daa1044-min.en-US.js" ></script><script crossorigin="anonymous" src="//assets.squarespace.com/universal/scripts-compressed/cldr-resource-pack-e8471b3cc241abbeef818-min.en-US.js" ></script><script crossorigin="anonymous" src="//assets.squarespace.com/universal/scripts-compressed/parking-page-cdc1d58c7a7bc954a6ac9-min.en-US.js" ></script><link rel="stylesheet" type="text/css" href="//assets.squarespace.com/universal/styles-compressed/parking-page-bb5854166c072896d1e2e-min.en-US.css">
 </head>
-<body>
-	<h1>welcome on otaku72 website!</h1>
+<body class="loading align-content-center-vertical color-dark">
+  <div class="background">
+    <div class="sqs-video-background content-fill" sqs-controller="VideoBackground" data-config-url="" data-config-playback-speed="" data-config-filter="" data-config-filter-strength="">
+      <div id="player"></div>
+    </div>
+
+    <img />
+  </div>
+
+  <div class="squarespace-logo">
+    <a href="" target="_blank">
+      <img src="https://assets.squarespace.com/universal/images-v6/damask/logo-light.svg" />
+    </a>
+  </div>
+  
+  <div class="content squarespace-loading-indicator">
+    <div class="animated-loading-spinner"></div>
+  </div>
+
+  <div class="content text-align-center">
+    <h1>Otaku 72</h1>
+  </div>
+
+  <div class="footer content text-align-center">
+    <p>We&apos;re under construction.<span class="line-break"> </span>Please check back for an update soon.
+</p>
+  </div>
+
 </body>
 </html>
